$Id: History,v 1.3 1999-11-16 11:04:04 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov     16, 99 G.Cosmo  - materials-V00-01-03
               Removed useless inclusion of RW tphdict.h from
	       G4MaterialPropertiesTable.hh. This tag includes the global
	       migration RWT->G4RWT (still CVS headers are different on the HEAD).

Nov     09, 99 P.Gumpliger  - materials-V00-01-02
               changes to comments for Software Reference Manual in
	       G4MPVEntry.hh, G4MaterialPropertyVector.hh, G4OpticalSurface.hh.
	       Migrated G4MaterialPropertiesTable from RW dictionary to STL map.

July    28, 99 M.Maire  - materials-V00-01-00
               new G4Material constructor with chemical formula
	                 
August  13, 98 M.Maire  - materials-00-02-01
               new static method G4Material::GetMaterial(name)     
     
July    17, 98 M.Maire  - materials-00-01-04
               correction in ComputeDensityCorrection() for gas
               (G4IonisParamMat.cc)    
     
July    10, 98 M.Maire  - materials-00-01-03
               Ionisation parameters put in a subclass
               coworks with em-00-01-03
                   
July     8, 98 M.Maire  - materials-00-01-02