@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4MaterialPropertiesTable.hh,v 1.8 1999-12-15 14:50:49 gunter Exp $
+// $Id: G4MaterialPropertiesTable.hh,v 1.9 2000-03-03 10:21:00 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -88,28 +88,28 @@ public: // Without description
 
 public: // With description
 
-	void AddProperty(char     *key,
+	void AddProperty(const char     *key,
 		         G4double *PhotonMomenta,
 		         G4double *PropertyValues,
 		         G4int     NumEntries);
         // Add a new property to the table by giving a key-name and the
         // arrays x and y of size NumEntries.
 
-	void AddProperty(char *key, G4MaterialPropertyVector *opv);
+	void AddProperty(const char *key, G4MaterialPropertyVector *opv);
         // Add a new property to the table by giving a key-name and an
         // already constructed G4MaterialPropertyVector.
 
-	void RemoveProperty(char *key);
+	void RemoveProperty(const char *key);
         // Remove a property from the table.
 
-	G4MaterialPropertyVector* GetProperty(char *key);
+	G4MaterialPropertyVector* GetProperty(const char *key);
         // Get the property from the table corresponding to the key-name.
 
-	void AddEntry(char *key, G4double aPhotonMomentum,
+	void AddEntry(const char *key, G4double aPhotonMomentum,
                                  G4double  aPropertyValue);
         // Add a new entry (pair of numbers) to the table for a given key.
 
-	void RemoveEntry(char *key, G4double  aPhotonMomentum);
+	void RemoveEntry(const char *key, G4double  aPhotonMomentum);
         // Remove an entry from the table for a given key and x-value.
 
 	void DumpTable();
